Was getting some errors displaying on mobile. Attempting to fix.

--- a/css/resume.css
+++ b/css/resume.css
@@ -66,6 +66,7 @@ h3 {
 
 #home a {
   font-size: 2rem;
+  transition: color 0.5s ease-out;
 }
 
 #home video {
@@ -351,10 +352,12 @@ a:hover, a:focus, a:active {
   #about {
     background-position: top;
     background-size: 250%;
+    background-attachment: unset;
   }
 
   .about {
     margin-top: 20vh;
+    background: rgba(255, 255, 255, 0.5);
   }
 
   #home a {
@@ -372,6 +375,10 @@ a:hover, a:focus, a:active {
 
   h2 {
     font-size: 2.5rem;
+  }
+
+  h1, h2 {
+  	font-weight: 900;
   }
 
   .desktop-view {
